# Toco-toco

./: .gitignore  ARCHITECTURE.md  README.md  config.py  main.py  pyproject.toml
src/: server.py
src/prompts/: __init__.py  templates.py
src/tools/: __init__.py  intelligent_retrieval.py  math_tools.py  resources.py  web_search_tools.py
src/tools/pinecone_tools/: pinecone_config.py
src/tools/rag_tools/: rag_retrical.py  rag_store.py
src/tools/sql_database_tools/: advanced_quary_builder.py  basic_sql.py  data_insights.py  data_integration_and_etl.py  database_administration_tools.py  schema_managment_tools.py  security_and_compliance_tools.py
